client/src/components/Map/map.css
.map-ui {
  height: 100%;
}

.map-ui ul {
  list-style: none;
  color: var(--secondary-color);
  padding: 0;
}

.progress-icon-wrapper {
  position: relative;
}

.progression-arrow {
  position: absolute;
  bottom: -31px;
  left: 29px;
}

.map-ui ul .progress-icon {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 4rem;
  margin: 0 10px 10px 0;
  position: relative;
}

.map-ui ul .progress-icon .cert-icon-outline {
  width: 4rem;
  height: 4rem;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  background-color: var(--secondary-color);
  border-radius: 50%;
}

.map-ui ul li .progress-icon .cert-icon-outline > svg {
  display: inline-block;
  height: 3rem;
  width: auto;
}

.map-ui ul li {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.map-ui ul li .arrow path {
  fill: var(--secondary-color);
}

.map-ui ul li .progress-number {
  width: calc(42px - 0.1rem);
  height: 4rem;
  border-radius: 50%;
  background-color: var(--quaternary-background);
  color: var(--secondary-color);
  border: 0.2rem solid var(--secondary-color);
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
}

@media (max-width: 640px) {
  .map-ui .block ul {
    padding-inline-start: 6rem;
    font-size: 0.9rem;
  }

  .map-ui > ul {
    padding-inline-start: 0;
  }
}

